Add articles manipulation requests & some refacts
